toast bg is clear...

--- a/resources/css/primevue/toast.css
+++ b/resources/css/primevue/toast.css
@@ -42,6 +42,7 @@
 .p-toast-message-error,
 .p-toast-message-secondary,
 .p-toast-message-contrast {
+    /* TODO: investigate */
     @apply border backdrop-blur-sm dark:backdrop-blur-md rounded-md
 }
 
