--- a/resources/css/primevue/datatable.css
+++ b/resources/css/primevue/datatable.css
@@ -287,11 +287,11 @@
 }
 
 .p-datatable-tbody > tr.p-datatable-dragpoint-top > td {
-    @apply shadow-[inset_0_2px_0_0_theme(colors.primary)]
+    @apply inset-shadow-[0_2px_0_0_theme(colors.primary)]
 }
 
 .p-datatable-tbody > tr.p-datatable-dragpoint-bottom > td {
-    @apply shadow-[inset_0_-2px_0_0_theme(colors.primary)]
+    @apply inset-shadow-[0_-2px_0_0_theme(colors.primary)]
 }
 
 .p-datatable-loading-icon {
